fix resource list shift for low resolution

--- a/ResourcePlanner.Services/webapp/app/dashboard/resourceFilters/resourceFilters.component.css
+++ b/ResourcePlanner.Services/webapp/app/dashboard/resourceFilters/resourceFilters.component.css
@@ -1,5 +1,5 @@
 .filterPanel {
-    height: 18%;
+    height: 24%;
 }
     .filterPanel .tags {
         width: 60%;
